--- a/nextjs-app/tsconfig.json
+++ b/nextjs-app/tsconfig.json
@@ -15,7 +15,13 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "baseUrl": ".", // Set the base URL
+    "paths": {
+      "@/lib/*": ["@/lib/*"], // Map the alias to the actual path
+      "@/components/*": ["@/components/*"], // Corrected: Added a comma here
+      // Add other aliases as needed
+    }
   },
   "include": [
     "next-env.d.ts",
