--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,17 @@ services:
     build:
       context: ./nextjs-app
       dockerfile: Dockerfile
-    mem_limit: 512M
+    mem_limit: 256M
     user: "1000:1000"
     ports:
       - "3004:3000"
     volumes:
       - ./nextjs-app:/app
+      - /app/node_modules
+      - /app/.next
+      - /app/dist
+      - /app/logs
+      - /app/.cache
     environment:
       - NODE_ENV=production
       - MONGODB_URI=mongodb://mongo:27017/yourdbname
