--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,13 +12,13 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Set up SSH
-      run: |
-        mkdir -p ~/.ssh/
-        echo "${{ secrets.ID_RSA }}" > ~/.ssh/id_rsa
-        chmod 600 ~/.ssh/id_rsa
-        ssh-keyscan profilytic.com >> ~/.ssh/known_hosts
-        chmod 644 ~/.ssh/known_hosts
+    - name: Set up SSH Agent
+      uses: webfactory/ssh-agent@v0.5.3
+      with:
+        ssh-private-key: ${{ secrets.ID_RSA }}
+
+    - name: Add SSH key to known hosts
+      run: ssh-keyscan profilytic.com >> ~/.ssh/known_hosts
 
     - name: Test SSH Connection
       run: ssh -T -v -o StrictHostKeyChecking=no root@profilytic.com
