--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    environment: proflytic  # Specify the environment name here
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
