--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - /app/logs
       - /app/.cache
     environment:
-      - NODE_ENV=production
+      - NODE_ENV=development
       - MONGODB_URI=mongodb://mongo:27017/yourdbname
       - LETSENCRYPT_HOST=profilytic.com, www.profilytic.com
       - LETSENCRYPT_EMAIL=jason@mavacode.com
