--- a/profilytic-worker/Dockerfile
+++ b/profilytic-worker/Dockerfile
@@ -1,5 +1,5 @@
-# Use the official Node.js 20.9.0-slim image as a base
-FROM node:20.9.0-slim
+# Use the official Node.js 22.2.0-slim image as a base
+FROM --platform=linux/amd64 node:22.2.0-slim
 
 # Set the working directory
 WORKDIR /app
@@ -13,12 +13,18 @@ RUN npm install
 # Copy the rest of the application code
 COPY . .
 
+RUN ls -la /app
+RUN ls -la /app/src
+
+ENV NODE_ENV=development
+ENV TEMPORAL_ADDRESS=temporal-server:7233
+
 # Set the environment variable for NODE_ENV
 ARG NODE_ENV
 ENV NODE_ENV $NODE_ENV
 
-# Conditionally run build for production
-RUN if [ "$NODE_ENV" = "production" ]; then npm run build; fi
+# Expose the application port
+EXPOSE 3000
 
 # Start the application
 CMD ["npm", "run", "dev"]
