--- a/nextjs-app/package.json
+++ b/nextjs-app/package.json
@@ -24,6 +24,7 @@
     "autoprefixer": "^10.4.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dotenv": "^16.4.5",
     "lucide-react": "^0.303.0",
     "next": "^14.0.4",
     "postcss": "^8.4.32",
