--- a/profilytic-backend/package.json
+++ b/profilytic-backend/package.json
@@ -13,6 +13,8 @@
   "author": "Jason Phillips",
   "license": "ISC",
   "dependencies": {
+    "@grpc/grpc-js": "^1.10.8",
+    "@grpc/proto-loader": "^0.7.13",
     "@temporalio/client": "^1.9.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
@@ -21,6 +23,7 @@
     "express": "^4.19.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
+    "module-alias": "^2.2.3",
     "mongoose": "^8.3.5",
     "uuid": "^9.0.1"
   },
@@ -30,11 +33,18 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/module-alias": "^2.0.4",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.12.12",
     "@types/uuid": "^9.0.8",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
+  },
+  "_moduleAliases": {
+    "@root": ".",
+    "@controllers": "src/controllers",
+    "@services": "src/services"
   }
+  
 }
