--- a/profilytic-worker/package.json
+++ b/profilytic-worker/package.json
@@ -4,7 +4,7 @@
   "description": "Worker service for Profilytic",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev": "ts-node-dev --respawn --transpile-only  src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,15 +13,18 @@
   "author": "Jason Phillips",
   "license": "ISC",
   "dependencies": {
-    "@temporalio/worker": "^1.9.3",
     "axios": "^1.6.8",
-    "dotenv": "^16.4.5",
     "mongoose": "^8.3.5"
   },
   "devDependencies": {
+    "@temporalio/common": "^1.9.3",
+    "@temporalio/worker": "^1.9.3",
+    "@temporalio/workflow": "^1.9.3",
     "@types/axios": "^0.14.0",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.12.12",
+    "dotenv": "^16.4.5",
+    "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
