--- a/profilytic-backend/package.json
+++ b/profilytic-backend/package.json
@@ -16,6 +16,7 @@
     "@grpc/grpc-js": "^1.10.8",
     "@grpc/proto-loader": "^0.7.13",
     "@temporalio/client": "^1.9.3",
+    "aws-sdk": "^2.1626.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -46,5 +47,4 @@
     "@controllers": "src/controllers",
     "@services": "src/services"
   }
-  
 }
