--- a/profilytic-worker/package.json
+++ b/profilytic-worker/package.json
@@ -21,6 +21,8 @@
     "@temporalio/worker": "^1.9.3",
     "@temporalio/workflow": "^1.9.3",
     "@types/axios": "^0.14.0",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.21",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.12.12",
     "dotenv": "^16.4.5",
