--- a/nextjs-app/package.json
+++ b/nextjs-app/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@hookform/resolvers": "^3.4.2",
     "@mui/icons-material": "^5.15.3",
     "@mui/material": "^5.15.3",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -30,11 +31,14 @@
     "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.5",
     "react-icons": "^4.12.0",
+    "react-modal": "^3.16.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.8.0"
+    "vaul": "^0.8.0",
+    "yup": "^1.4.0"
   },
   "description": "",
   "devDependencies": {
