--- a/nextjs-app/package.json
+++ b/nextjs-app/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^41.4.2",
+    "@ckeditor/ckeditor5-react": "^7.0.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
@@ -22,18 +24,22 @@
     "@mui/material": "^5.15.3",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
+    "@reduxjs/toolkit": "^2.2.5",
     "autoprefixer": "^10.4.16",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "dotenv": "^16.4.5",
     "lucide-react": "^0.303.0",
-    "next": "^14.0.4",
+    "next": "^14.2.3",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
     "react-icons": "^4.12.0",
     "react-modal": "^3.16.1",
+    "react-quill": "^2.0.0",
+    "redux": "^5.0.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
@@ -43,12 +49,17 @@
   "description": "",
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
+    "@types/geoip-lite": "^1.4.4",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.46",
+    "@types/react-redux": "^7.1.33",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
     "next-compose-plugins": "^2.2.1",
     "next-images": "^1.8.5",
     "typescript": "^5.3.3"
+  },
+  "peerDependencies": {
+    "react-redux": "^9.1.2"
   }
 }
